--- a/Views/Invites/Create.cshtml
+++ b/Views/Invites/Create.cshtml
@@ -10,7 +10,7 @@
 <h1>Create</h1>
 <h4>Invite</h4>
 <hr />
-<div class="col-lg-6 col-md-12">
+<div class="col-12">
     <div class="card custom-card">
         <div class="card-body">
             <div>
@@ -18,7 +18,7 @@
                 <p class="text-muted card-sub-title">Invite a new user to join your Bug Tracker company.</p>
             </div>
             <form asp-action="Create">
-                <div class="row row-xs align-items-center mg-b-20">
+                <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
                         <label class="mg-b-0">Email</label>
                     </div>
@@ -26,7 +26,7 @@
                         <input type="email" asp-for="InviteeEmail" class="form-control" placeholder="Enter email">
                     </div>
                 </div>
-                <div class="row row-xs align-items-center mg-b-20">
+                <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
                         <label class="mg-b-0">Firstname</label>
                     </div>
@@ -34,7 +34,7 @@
                         <input type="text" asp-for="InviteeFirstName" class="form-control" placeholder="Enter first name">
                     </div>
                 </div>
-                <div class="row row-xs align-items-center mg-b-20">
+                <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
                         <label class="mg-b-0">Lastname</label>
                     </div>
@@ -42,7 +42,7 @@
                         <input type="text" asp-for="InviteeLastName" class="form-control" placeholder="Enter last name">
                     </div>
                 </div>
-                <div class="row row-xs align-items-center mg-b-20">
+                <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
                         <label class="mg-b-0">Select Project</label>
                     </div>
@@ -52,12 +52,12 @@
                         </select>
                     </div>
                 </div>
-                <div class="row row-xs align-items-center mg-b-20">
+                <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
                         <label class="mg-b-0">Message</label>
                     </div>
                     <div class="col-md-8 mg-t-5 mg-md-t-0">
-                        <textarea asp-for="Message" multiple="multiple" class="form-control"></textarea>
+                        <textarea id="editor" asp-for="Message" multiple="multiple" class="form-control"></textarea>
                     </div>
                 </div>
                 <div class="form-group row justify-content-end mb-0">
@@ -75,5 +75,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
