--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,24 +5,41 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
-                <label asp-for="Username" class="form-label"></label>
+<div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+     aria-labelledby="v-pills-home-tab">
+    <form class="card" id="profile-form" method="post">
+        <div class="card-body">
+            <h6 class="card-title">Your Profile</h6>
+            <div class="col-12 d-flex flex-column flex-sm-row mb-3">
+                <figure class="mr-3 text-center text-sm-left">
+                    <img width="100" class="rounded-pill"
+                         src="../../assets/media/image/user/women_avatar1.jpg" alt="...">
+                </figure>
+                <div style="margin-left:2rem;">
+                    <p>Roxana Roussell</p>
+                    <button class="btn btn-outline-light mr-2">Change Avatar</button>
+                    <button class="btn btn-outline-danger">Remove Avatar</button>
+                    <p class="small text-muted mt-3">
+                        For best results, use an image at least
+                        256px by 256px in either .jpg or .png format
+                    </p>
+                </div>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
-                <label asp-for="Input.PhoneNumber" class="form-label"></label>
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            <div class="row">
+                <div class="col-12">
+                    <div class="form-group">
+                        <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
+                    </div>
+                    <div class="form-group">
+                        <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number." />
+                        <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                    </div>
+                    <button class="btn btn-primary">Save</button>
+                </div>
             </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
 
 @section Scripts {
