--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -5,20 +5,24 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h3>@ViewData["Title"]</h3>
-
-<div class="row">
-    <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
-        <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-        </p>
-        <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Download</button>
-        </form>
-        <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
-        </p>
+<div class="tab-pane" id="v-pills-profile"
+     aria-labelledby="v-pills-profile-tab">
+    <div class="card">
+        <div class="card-body">
+            <h6 class="card-title">Personal Data</h6>
+            <div class="row">
+                <div class="col-12">
+                    <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+                    <p>
+                        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+                    </p>
+                    <form id="download-data" asp-page="DownloadPersonalData" class="d-flex justify-content-between" method="post">
+                        <button class="btn btn-primary" type="submit">Download</button>
+                        <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+                    </form>                        
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
