--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -3,18 +3,20 @@
 @using CrucibleBugTracker.Services.Interfaces
 @using CrucibleBugTracker.Enums
 @using Microsoft.AspNetCore.Identity;
+@using CrucibleBugTracker.Extensions;
 
 
 @inject IBTFileService _FileService
 @inject IBTRoleService _RoleService
 @inject IBTProjectService _ProjectService
-@inject UserManager<BTUser> _userManager
+@inject UserManager<BTUser> _UserManager
 
 @{
     ViewData["Title"] = "Details";
     BTUser? projectManager = await _ProjectService.GetProjectManagerAsync(Model.Id, Model.CompanyId);
-    string? userId = (await _userManager.GetUserAsync(User))?.Id;
-
+    string? userId = (await _UserManager.GetUserAsync(User))?.Id;
+    int companyId = User.Identity!.GetCompanyId();
+    List<string> companyDeveloperIds = (await _RoleService.GetUsersInRoleAsync(nameof(BTRoles.Developer), companyId)).Select(u => u.Id).ToList();
 }
 
 
@@ -227,9 +229,22 @@
                                                 </a>
                                                 <div class="dropdown-menu dropdown-menu-right">
                                                     <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="dropdown-item">View Detail</a>
-                                                    <a asp-controller="Tickets" asp-action="AssignDev" asp-route-id="@ticket.Id" class="dropdown-item">Assign Dev</a>
-                                                    <a asp-controller="Tickets" asp-action="Edit" asp-route-id="@ticket.Id" class="dropdown-item">Edit</a>
-                                                    <a asp-controller="Tickets" asp-action="Archive" asp-route-id="@ticket.Id" class="dropdown-item text-danger">Archive</a>
+                                                    @{
+                                                        if (User.IsInRole(nameof(BTRoles.Admin)) || (await _ProjectService.GetProjectManagerAsync(ticket.ProjectId, companyId))?.Id == _UserManager.GetUserId(User))
+                                                        {
+                                                            <a role="button" data-toggle="modal" data-target="#assignDevModal" class="dropdown-item" onclick="populateDevModal(@ticket.Id, @ticket.ProjectId, '@ticket.DeveloperUserId', '@ticket.Title')">Assign Dev</a>
+                                                            <a asp-controller="Tickets" asp-action="Edit" asp-route-id="@ticket.Id" class="dropdown-item">Edit</a>
+
+                                                            @if (ticket.Archived)
+                                                            {
+                                                                <a role="button" data-toggle="modal" data-target="#restoreTicketModal" class="dropdown-item text-success" onclick="populateTicketRestoreModal(@ticket.Id, '@ticket.Title')">Restore</a>
+                                                            }
+                                                            else
+                                                            {
+                                                                <a role="button" data-toggle="modal" data-target="#archiveTicketModal" class="dropdown-item text-danger" onclick="populateTicketArchiveModal(@ticket.Id, '@ticket.Title')">Archive</a>
+                                                            }
+                                                        }
+                                                    }
                                                 </div>
                                             </div>
                                         </td>
@@ -312,13 +327,137 @@
     </div>
 </div>
 
+<div class="modal fade" id="assignDevModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Assign Developer</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <i class="ti-close"></i>
+                </button>
+            </div>
+            <form asp-controller="Tickets" asp-action="AssignDev" method="post" class="d-flex flex-column">
+                <div class="modal-body pt-1">
+                    <h5 id="modalTicketTitle">Ticket Title</h5>
+                    <input type="hidden" id="modalTicketId" name="ticketId" value="" />
+                    <select class="form-control" name="developerId" id="developerUsers">
+                        <option value="@null">Unassigned</option>
+                    </select>
+                </div>
+                <div class="modal-footer" style="height:inherit">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        Close
+                    </button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="restoreTicketModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Restore Ticket</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <i class="ti-close"></i>
+                </button>
+            </div>
+            <form asp-controller="Tickets" asp-action="Restore" asp-route-id="" method="post" class="d-flex flex-column">
+                <div class="modal-body pt-0">
+                    <h5 id="restoreTicketTitle">Ticket Title</h5>
+                    <input type="hidden" id="restoreTicket" name="restoreTicketId" value="" />
+                    <span>Are you sure you want to restore this ticket?</span>
+                </div>
+                <div class="modal-footer" style="height:inherit">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        No/Close
+                    </button>
+                    <button type="submit" class="btn btn-primary">Yes/Save changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="archiveTicketModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Archive Ticket</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <i class="ti-close"></i>
+                </button>
+            </div>
+            <form asp-controller="Tickets" asp-action="Archive" method="post" class="d-flex flex-column">
+                <div class="modal-body pt-0">
+                    <h5 id="archiveTicketTitle">Ticket Title</h5>
+                    <input type="hidden" id="archiveTicket" name="archiveTicketId" value="" />
+                    <span>Are you sure you want to archive this ticket?</span>
+                </div>
+                <div class="modal-footer" style="height:inherit">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        No/Close
+                    </button>
+                    <button type="submit" class="btn btn-primary">Yes/Save changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
 @section scripts {
     <script>
         $(document).ready(function () {
-            $('#projectsTable').DataTable();
+            $('#ticketsTable').DataTable();
         });
     </script>
     <script>
+        let projectMembers = [
+            {
+                projectId: @Model.Id,
+                members: [
+        @foreach (var member in Model.Members.Where(m => companyDeveloperIds.Contains(m.Id) == true))
+        {
+            <text>
+                        {
+                            name: '@member.FullName',
+                            id: '@member.Id',
+                        },
+            </text>
+        }
+                                                                                                                                                                                                    ]
+            },
+
+
+        ];
+
+        function getMembers(projectId) {
+            return projectMembers.find(p => p.projectId == projectId).members;
+        }
+        function populateDevModal(iD, projectId, developerId, ticketTitle) {
+            var ticketId = document.getElementById("modalTicketId");
+            ticketId.value = iD;
+
+            var modalTicketTitle = document.getElementById("modalTicketTitle");
+            modalTicketTitle.innerHTML = ticketTitle;
+
+            members = getMembers(projectId);
+
+            var select = document.getElementById("developerUsers");
+            members.forEach(function (member) {
+                var option = document.createElement("option");
+                option.text = member.name;
+                option.value = member.id;
+
+                if (option.value == developerId) {
+                    option.selected = true;
+                }
+
+                select.add(option);
+            });
+        }
+
         function populateArchiveModal(archiveId, numberOfTickets, projectName) {
             var projectId = document.getElementById("archiveProject");
             projectId.value = archiveId
@@ -339,6 +478,20 @@
 
             var restoreProjectName = document.getElementById("restoreProjectName");
             restoreProjectName.innerHTML = projectName;
+        }
+
+        function populateTicketArchiveModal(archiveId, ticketTitle) {
+            var ticketId = document.getElementById("archiveTicket");
+            ticketId.value = archiveId
+            var archiveTicketTitle = document.getElementById("archiveTicketTitle");
+            archiveTicketTitle.innerHTML = ticketTitle;
+        }
+
+        function populateTicketRestoreModal(restoreId, ticketTitle) {
+            var ticketId = document.getElementById("restoreTicket");
+            ticketId.value = restoreId;
+            var restoreTicketTitle = document.getElementById("restoreTicketTitle");
+            restoreTicketTitle.innerHTML = ticketTitle;
         }
     </script>
 }
